aws/rds-mysql.tf
# RDS
resource "aws_db_instance" "mysql" {
    identifier = "${var.rds-identifier}"
    instance_class = "${var.rds-instance-class}" 
    allocated_storage = "${var.rds-allocated-storage}" 
    storage_type = "${var.rds-storage-type}"
    engine = "mysql"
    multi_az = "${var.rds-multi-az}"

    port = "${var.rds-port}"

    name = "${var.rds-db-name}"
    username = "${var.rds-db-user}"
    password = "${var.rds-db-password}"

    vpc_security_group_ids = ["${aws_security_group.mysql.id}"]
    db_subnet_group_name = "${aws_db_subnet_group.default.name}"
    
    tags {
        group = "mage-rds"
    }
}

# RDS subnet group
resource "aws_db_subnet_group" "default" {
    name = "main"
    description = "Subnet group for RDS/MySQL"
    subnet_ids = ["${aws_subnet.private.*.id}"]
    tags {
        Name = "mage-db-subnet-group"
    }
}
